--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/layout/activity_main.xml
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="338dp"
         android:layout_height="333dp"
         android:autoSizeTextType="uniform"
-        android:text="GPT2 Comedy Writer"
+        android:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -39,7 +40,6 @@
         android:layout_height="70dp"
         android:layout_marginStart="60dp"
         android:clickable="true"
-        android:src="@drawable/ic_baseline_thumb_down_24"
         app:fabCustomSize="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
