--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/layout/activity_main.xml
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <RelativeLayout
+        android:id="@+id/rl_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="338dp"
-        android:layout_height="333dp"
-        android:autoSizeTextType="uniform"
-        android:text="@string/app_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.256" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="338dp"
+            android:layout_height="333dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="30dp"
+            android:autoSizeTextType="uniform"
+            android:text="@string/app_name" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/likeFloatingButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="60dp"
-        android:clickable="true"
-        app:fabCustomSize="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.855"
-        app:srcCompat="@drawable/ic_baseline_thumb_up_24"
-        app:useCompatPadding="true" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/likeFloatingButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignEnd="@id/textView"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="50dp"
+            android:clickable="true"
+            app:fabCustomSize="70dp"
+            app:srcCompat="@drawable/ic_baseline_thumb_up_24"
+            app:useCompatPadding="true" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/dislikeFloatingButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="60dp"
-        android:clickable="true"
-        app:fabCustomSize="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.855"
-        app:srcCompat="@drawable/ic_baseline_thumb_down_24"
-        app:useCompatPadding="true" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/dislikeFloatingButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignStart="@id/textView"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="50dp"
+            android:clickable="true"
+            app:fabCustomSize="70dp"
+            app:srcCompat="@drawable/ic_baseline_thumb_down_24"
+            app:useCompatPadding="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="70dp"
+            android:text="@string/save"
+            android:includeFontPadding="true"/>
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity = "start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/main_header"
+        app:menu="@menu/drawer_menu" />
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
