Implemented Favorite Jokes RecyclerView

--- a/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/layout/activity_saved_jokes.xml
+++ b/PersonalWorkRepo/PracticeApps/GPT3ComedyMaker2/app/src/main/res/layout/activity_saved_jokes.xml
@@ -9,5 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/saved_jokes_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
