--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,14 @@
             android:layout_marginBottom="70dp"
             android:text="@string/save"
             android:includeFontPadding="true"/>
+
+        <Button
+            android:id="@+id/load_jokes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="4dp"
+            android:text="Load" />
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
