--- a/app/src/main/res/layout/home_row_layout.xml
+++ b/app/src/main/res/layout/home_row_layout.xml
@@ -13,34 +13,41 @@
 
     <TextView
         android:id="@+id/joke_list_item"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:outlineAmbientShadowColor="@color/black_overlay"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text="@string/app_name"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/row_like_button"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.41" />
 
     <Button
         android:id="@+id/row_dislike_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
-        android:text="Dislike"
+        android:foreground="@drawable/ic_baseline_thumb_down_24"
+        android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/row_like_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
+
         android:layout_marginBottom="8dp"
-        android:text="Like"
+        android:foreground="@drawable/ic_baseline_thumb_up_24"
+        android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/row_dislike_button" />
 
