--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,5 +12,8 @@
     <item
         android:id="@+id/nav_about"
         android:title="@string/about"/>
+    <item
+        android:id="@+id/send_feedback"
+        android:title="Send Feedback"/>
 
 </menu>
