--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,28 +10,80 @@
     <RelativeLayout
         android:id="@+id/rl_layout"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="338dp"
-            android:layout_height="333dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="30dp"
-            android:autoSizeTextType="uniform"
-            android:text="@string/app_name" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/save_button"
+            android:layout_below="@+id/load_jokes"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/titleTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_margin="5dp"
+                    android:text="@string/app_name"
+                    android:textSize="50sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/authorName"
+                    android:background="@drawable/outline_for_textviews"
+                    android:clickable="true"/>
+
+
+                <TextView
+                    android:id="@+id/authorName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Author Name: "
+                    android:textSize="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textViewPunchline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_margin="5dp"
+                    android:text="This is a joke test for testing purposes."
+                    android:textSize="50sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+                    android:background="@drawable/outline_for_textviews"
+                    android:visibility="gone"
+                    />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/main_comment_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    app:layout_constraintTop_toBottomOf="@+id/textViewPunchline"></androidx.recyclerview.widget.RecyclerView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/likeFloatingButton"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_alignEnd="@id/textView"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="50dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="4dp"
             android:clickable="true"
             app:fabCustomSize="70dp"
             app:srcCompat="@drawable/ic_baseline_thumb_up_24"
@@ -41,23 +93,27 @@
             android:id="@+id/dislikeFloatingButton"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_alignStart="@id/textView"
+            android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="50dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginBottom="3dp"
             android:clickable="true"
             app:fabCustomSize="70dp"
             app:srcCompat="@drawable/ic_baseline_thumb_down_24"
             app:useCompatPadding="true" />
 
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/save_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="3dp"
+            android:includeFontPadding="true"
+            android:src="@drawable/ic_baseline_favorite_24"
             android:text="@string/save"
-            android:includeFontPadding="true"/>
+            app:fabCustomSize="70dp"
+            app:useCompatPadding="true" />
 
         <Button
             android:id="@+id/load_jokes"
@@ -68,14 +124,15 @@
             android:text="Load" />
     </RelativeLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        android:layout_gravity = "start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/main_header"
-        app:menu="@menu/drawer_menu" />
+
+<com.google.android.material.navigation.NavigationView
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:id="@+id/nav_view"
+    android:layout_gravity = "start"
+    android:fitsSystemWindows="true"
+    app:headerLayout="@layout/main_header"
+    app:menu="@menu/drawer_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
