--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -8,14 +8,16 @@
     android:paddingStart="8dp"
     android:paddingTop="8dp"
     android:paddingEnd="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp" >
 
     <TextView
-        android:id="@+id/textAuthor"
-        android:text="Author: "
+        android:id="@+id/text_author"
+        android:text="@string/author_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        android:textSize="20sp"
+        android:textColor="@color/design_default_color_background"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
@@ -24,27 +26,43 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:padding="10dp"
         android:text="Joke Header"
-        android:textSize="70dp"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textAuthor" />
+        app:layout_constraintTop_toBottomOf="@id/text_author"
+        android:outlineAmbientShadowColor="@color/black_overlay"
+        android:background="@drawable/outline_for_textviews"
+        android:clickable="true"
+        android:layout_marginBottom="5dp"
+        />
 
     <TextView
         android:id="@+id/joke_punchline"
         android:text="Joke Punchline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="70dp"
+        android:textSize="50sp"
+        android:padding="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/joke_list_item"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:outlineAmbientShadowColor="@color/black_overlay"
+        android:background="@drawable/outline_for_textviews"
+        />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/show_comments"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/joke_punchline"/>
+        android:text="@string/show_comments"
+        android:textColor="@color/design_default_color_background"
+        app:layout_constraintTop_toBottomOf="@id/joke_punchline"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="true"/>
 
 
 
