--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
     <RelativeLayout
         android:id="@+id/rl_layout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#151515">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/save_button"
-            android:layout_below="@+id/load_jokes"
+            android:layout_above="@id/save_button"
+            android:layout_alignParentTop="true"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp">
 
@@ -28,15 +29,15 @@
                     android:id="@+id/titleTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
                     android:layout_margin="5dp"
+                    android:background="@drawable/outline_for_textviews"
+                    android:clickable="true"
+                    android:padding="10dp"
                     android:text="@string/app_name"
                     android:textSize="50sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/authorName"
-                    android:background="@drawable/outline_for_textviews"
-                    android:clickable="true"/>
+                    app:layout_constraintTop_toBottomOf="@+id/authorName" />
 
 
                 <TextView
@@ -45,8 +46,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="16dp"
-                    android:text="Author Name: "
-                    android:textSize="20dp"
+                    android:text="@string/author_name"
+                    android:textSize="20sp"
+                    android:textColor="@color/design_default_color_background"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,26 +56,38 @@
                     android:id="@+id/textViewPunchline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
                     android:layout_margin="5dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/outline_for_textviews"
+                    android:padding="10dp"
                     android:text="This is a joke test for testing purposes."
                     android:textSize="50sp"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-                    android:background="@drawable/outline_for_textviews"
+                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+
+                <TextView
+                    android:id="@+id/main_show_comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:clickable="true"
+                    android:text="@string/show_comments"
+                    android:textColor="@color/design_default_color_background"
                     android:visibility="gone"
-                    />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewPunchline" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/main_comment_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
-                    app:layout_constraintTop_toBottomOf="@+id/textViewPunchline"></androidx.recyclerview.widget.RecyclerView>
+                    android:paddingBottom="100dp"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewPunchline" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -115,15 +129,46 @@
             app:fabCustomSize="70dp"
             app:useCompatPadding="true" />
 
-        <Button
-            android:id="@+id/load_jokes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="4dp"
-            android:text="Load" />
     </RelativeLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/intro_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/design_default_color_background"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/intro_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="@color/design_default_color_secondary_variant"
+            android:textSize="70sp"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/intro_pic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/robot_icon"
+            app:layout_constraintTop_toBottomOf="@id/intro_name"
+            app:layout_constraintBottom_toTopOf="@id/introDescription"/>
+
+        <TextView
+            android:id="@+id/introDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/intro_description"
+            android:textColor="@color/design_default_color_secondary_variant"
+            android:textSize="50sp"
+            android:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@id/intro_pic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 <com.google.android.material.navigation.NavigationView
     android:layout_width="wrap_content"
