--- a/app/src/main/res/layout/comment_row_layout.xml
+++ b/app/src/main/res/layout/comment_row_layout.xml
@@ -7,7 +7,18 @@
     android:paddingBottom="8dp">
 
     <TextView
-        android:id="@+id/commentView"
+        android:id="@+id/comment_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="comment author: "
+        android:textColor="@color/design_default_color_background"
+        android:layout_margin="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/comment_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -16,5 +27,5 @@
         android:text="This is a comment"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/comment_author" />
 </androidx.constraintlayout.widget.ConstraintLayout>
